# crypto-alarm-bot

./: .env.dict  .flake8  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docker-compose/: monitoring.yml  storages.yml
src/: app.py
src/bot/: __init__.py  bot.py  views.py
src/bot/handlers/: __init__.py  start.py
src/bot/middlewares/: acl.py
src/core/: config.py
src/database/alembic/: env.py
src/database/alembic/versions/: 3df86d2d33f3_add_tg_user_table.py
src/gateways/database/: connection.py
src/gateways/database/models/: user.py
src/gateways/database/repositories/: users.py
src/pair_listener/: manager.py  schemas.py
