[tool.poetry]
name = "crypto-alarm-bot"
version = "0.1.0"
description = ""
authors = ["Egor Slamihin <slamihin123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
