[tool.poetry]
name = "crypto-alarm-bot"
version = "0.1.0"
description = ""
authors = ["Egor Slamihin <slamihin123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
ipython = "^8.2.0"
aiojobs = "^1.0.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.35"}
asyncpg = "^0.25.0"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
    .data
'''

[tool.isort]
profile = "black"
line_length = 88
skip = "migrations"

[tool.autopep8]
max_line_length = 83
